--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@ body {
 }
 
 input {
+  font: small-caption;
   width: 200px;
   border: none;
   outline: none;
@@ -48,18 +49,18 @@ input {
 }
 input:focus {
   transition: 0.4s ease-in-out;
-  width: 90%;
+  width: 60%;
 }
 ::placeholder {
   color: black;
 }
 button {
-  width: 200px;
+  width: 160px;
   padding: 10px;
-  border-radius: 30px;
+  border-radius: 10px;
   border: none;
   margin-bottom: 0px;
-  background: linear-gradient(270deg, #be3efe, #3e4efe);
+  background-color: rgb(30, 120, 255);
   background-size: 600% 600%;
   animation: AnimationName 4s ease infinite;
   color: white;
@@ -72,10 +73,10 @@ button {
 .button2 {
   width: 100px;
   padding: 10px;
-  border-radius: 30px;
+  border-radius: 10px;
   border: none;
   margin-top: 0px;
-  background: linear-gradient(270deg, #be3efe, #3e4efe);
+  background-color: rgb(29, 29, 29);
   background-size: 600% 600%;
   animation: AnimationName 4s ease infinite;
   color: white;
@@ -90,7 +91,7 @@ button {
   cursor: pointer;
 }
 button:hover {
-  transform: scale(0.94);
+  transform: scale(1.1);
   transition: 0.2s ease-in-out;
 }
 form {
